--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
-astroid==2.3.1
+bleach==3.1.0
 boto3==1.9.243
 botocore==1.12.243
+certifi==2019.9.11
+chardet==3.0.4
 docutils==0.15.2
 grpcio==1.24.1
-isort==4.3.21
+idna==2.8
 jmespath==0.9.4
-lazy-object-proxy==1.4.2
-mccabe==0.6.1
-mypy==0.730
-mypy-extensions==0.4.2
+pkginfo==1.5.0.1
 protobuf==3.10.0
-pylint==2.4.2
+Pygments==2.4.2
 python-dateutil==2.8.0
+readme-renderer==24.0
+requests==2.22.0
+requests-toolbelt==0.9.1
 s3transfer==0.2.1
 simiotics==0.5.0
 six==1.12.0
-typed-ast==1.4.0
-typing-extensions==3.7.4
+tqdm==4.36.1
+twine==2.0.0
 urllib3==1.25.6
-wrapt==1.11.2
+webencodings==0.5.1
